compiler/src/compile/snapshots/compiler__compile__ir__test__ir_generation_snapshot_tests@binary_and_and_or_inside_if.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/ir.rs
expression: output
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/ir/binary_and_and_or_inside_if.tapir
---
=======================
fn @toplevel() -> 

---- block 2 ----
temp.4 = bool true
temp.3 = bool false
conditional_jump temp.4 0 1

---- block 0 ----
temp.3 = bool true
jmp 1

---- block 1 ----
temp.2 = bool true
conditional_jump temp.3 4 3

---- block 4 ----
conditional_jump temp.2 5 6

---- block 3 ----
temp.2 = bool false
jmp 4

---- block 5 ----
temp.5 = bool true
x.1 = temp.5
jmp 7

---- block 6 ----
jmp 7

---- block 7 ----
return
