compiler/src/compile/snapshots/compiler__compile__ir__test__ir_generation_snapshot_tests@builtin_call_multiple_args.tapir.snap
---
source: compiler/src/compile/ir.rs
expression: output
input_file: compiler/src/compile/snapshot_tests/ir/builtin_call_multiple_args.tapir
---
=======================
fn @toplevel() -> 

---- block 0 ----
temp.2 = fix 1
temp.3 = fix 2
temp.1 = builtin atan2(temp.2, temp.3)
angle.0 = temp.1
return
