compiler/src/compile/snapshots/compiler__compile__ir__test__ir_generation_snapshot_tests@empty.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/ir.rs
expression: output
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/ir/empty.tapir
---
=======================
fn @toplevel() -> 

---- block 0 ----
return
