compiler/src/compile/snapshots/compiler__compile__ir__test__ir_generation_snapshot_tests@extern_call_expression.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/ir.rs
expression: output
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/ir/extern_call_expression.tapir
---
=======================
fn @toplevel() -> 

---- block 0 ----
temp.3 = int 5
temp.2 = extern get_value(temp.3)
result.0 = temp.2
temp.5 = result.0
temp.6 = fix 2
temp.4 = temp.5 f* temp.6
doubled.1 = temp.4
return
