compiler/src/compile/snapshots/compiler__compile__ir__test__ir_generation_snapshot_tests@extern_call_in_function.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/ir.rs
expression: output
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/ir/extern_call_in_function.tapir
---
=======================
fn @toplevel() -> 

---- block 0 ----
temp.3 = int 5
result.0 = use_extern(temp.3)
return 

=======================
fn use_extern(x.1) -> int

---- block 0 ----
ext.2 = extern get_external()
temp.5 = x.1
temp.6 = ext.2
temp.4 = temp.5 + temp.6
return temp.4
